# PointCloudOps

./: .gitignore  distanceToPlane.asv  distanceToPlane.m  temp.m
MATLAB/: distanceToPlane.m  planefitting.m  registrationscript.m  temp.m
MATLAB/fig/: Lwallback2.fig  Rwallback204.fig  lwallcenter.fig  lwallcenter_hist.fig
MATLAB/mat/: 204planefitting.mat  204walls.mat
cpp/keypoints_tutorial/: narf_keypoint_extraction.cpp
cpp/normals_estimation/: CMakeLists.txt  normals_estimation.cpp
cpp/visualizer/: CMakeLists.txt  point_cloud_visualizer.cpp
mat/: cleanedroom.mat  walls.mat
raw/: cleaned444room.pcd
raw/bag/: blam_data_feb.bag  blam_data_feb_lobby.bag  blam_data_feb_lobby_90.bag
raw/pcd/: cleaned444roomfloat.pcd
raw/pcd/ENGMC204/: small_202_combined.pcd  small_initial.pcd
raw/pcd/pcd_3min_blam/: 0.000000000.pcd  1508533254.761899000.pcd  1508533257.989409000.pcd  1508533289.457697000.pcd  1508533292.987833000.pcd  1508533294.500763000.pcd  1508533297.123091000.pcd  1508533297.929989000.pcd  1508533298.837721000.pcd  1508533302.266977000.pcd  1508533303.477297000.pcd
